# scam-website-detection-app-mvp

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  website-risk-investigator-design.md
app/: config.py  db.py  evidence.py  models.py  storage.py
app/aggregator/: __init__.py  rules.py
app/api/: main.py  schemas.py
app/crawler/: fetcher.py  pipeline.py  planner.py  renderer.py  urls.py  vocabulary.py
app/crawler/extractors/: __init__.py  base.py  bot_block.py  contact.py  forms.py  language.py  legal.py  links.py  metadata.py  trackers.py  visible_text.py
app/reporter/: __init__.py  deep.py  deep_prompts.py  narrative.py  prompts.py  writer.py
app/web/static/: app.js  index.html  investigation.html  styles.css
app/worker/: main.py  tasks.py
db/: 001_initial.sql  002_verdict_fields.sql
tests/: test_aggregator.py  test_deep_review.py  test_pipeline_cross_page.py  test_reporter.py  test_smoke.py
